--- a/Pages/taskboard/index.html
+++ b/Pages/taskboard/index.html
@@ -3,7 +3,7 @@
 	<head>
 		
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
-		<link rel="stylesheet" href="../Css/grid.css" title="openJsGrid"/>
+		<!-- <link rel="stylesheet" href="../Css/grid.css" title="openJsGrid"/> -->
 		<script src="../../Resources/Library/js/jquery.js" type="text/javascript"></script>
 		<script src="../../Resources/Library/js/root.js"></script>
 		<script src="../../Resources/Library/js/grid.js"></script>
@@ -19,7 +19,7 @@
 					editing : true,
 					deleting : true,
 					nRowsShowing : 10,
-					width: 800,
+					width: 100,
 					rowNumbers: true,
 					checkboxes: true,
 					cellTypes : {
